<resources>
    <string name="app_name">SAE</string>
    <string name="logo">Logo application</string>
    <string name="geste">Chaque geste compte\nSoutenez les causes qui vous tiennent à cœur</string>
    <string name="connexion">Se connecter</string>
    <string name="inscription">S\'inscrire</string>
    <string name="don">Faire un don</string>
    <string name="retour">Retour</string>
    <string name="profil">Profil</string>
    <string name="email">E-mail</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="mot_de_passe_oublie"><u>Mot de passe oublié</u></string>
    <string name="connection">Connexion</string>
    <string name="pascompte">Pas encore de compte ?</string>
    <string name="inscrireici"><u>S\'inscrire ici</u></string>
    <string name="creer_compte">Créer un compte</string>
    <string name="prenom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="donrecurent">Voulez-vous que ce don soit récurrent ?</string>
    <string name="non">Non</string>
    <string name="oui">Oui</string>
    <string name="periodicite">Quelle périodicité souhaitez-vous ? </string>
    <string name="donmensuel">Dons mensuels</string>
    <string name="donsannuel">Dons Annuels</string>
    <string name="deconnecter">Se déconnecter</string>
    <string name="aiderasso">Je veux aider une association</string>
    <string name="date_naissance">Date de naissance</string>
    <string name="chercher">Rechercher une association</string>
    <string name="consulter">Consulter mes dons mensuels</string>
    <string name="fairedon">Faire un don</string>
    <string name="choisirasso">Choississez une association</string>
    <string name="acc_s_admin">Accès Admin</string>
    <string name="choixmontant">Choisir un montant : </string>
    <string name="ou">Ou </string>
    <string name="Modepaiment">Mode de paiement :  </string>
    <string name="donner">Donner </string>
    <string name="montant">Entrez le montant </string>
    <string name="saisiemontant">Saisir le montant :</string>
    <string name="saisirmontant">Saisir un montant</string>
    <string name="cartebancaire">Carte bancaire</string>
    <string name="ibanbic">IBAN/BIC</string>
    <string name="_50">50 €</string>
    <string name="_20">20 €</string>
    <string name="_10">10 €</string>
    <string name="carte_bancaire">Carte Bancaire</string>
    <string name="profil_admin">Profil admin</string>
    <string name="tableau_bord">Tableau de bord</string>
    <string name="activite_recente">Activités récentes</string>
    <string name="nombre_dons_realises">Nombre de dons réalisés</string>
    <string name="derniers_dons_recus">Derniers dons reçus</string>
    <string name="nom_de_l_association">Nom de l\'Association</string>
    <string name="acces_admin">Accès Admin</string>
    <string name="tableau_de_bord">Tableau de bord</string>
    <string name="activit_s_r_centes">Activités récentes</string>
    <string name="nombre_de_dons_r_alis_s">Nombre de dons réalisés</string>
    <string name="derniers_dons_re_us">Derniers dons reçus</string>
    <string name="date">Date</string>
    <string name="payer">Payer</string>
    <string name="infos_paiement_iban">Informations de paiement</string>
    <string name="infoPaiment">Informations de paiment</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="valider_le_paiement">Valider le paiement</string>
    <string name="nom_du_titulaire_du_compte">Nom du titulaire du compte</string>
    <string name="iban">IBAN</string>
    <string name="choix">On vous aide à choisir</string>
    <string name="bic_swift">BIC / SWIFT</string>
    <string name="nom_du_titulaire">Nom du titulaire</string>
    <string name="cvv">CVV</string>
    <string name="dons_pour">"Dons pour : "</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="valider">Valider</string>
    <string name="entrez_votre_pr_nom_ou_laissez_vide_pour_anonyme">Entrez votre prénom (ou laissez vide pour anonyme)</string>
    <string name="entrez_prenom">Entrez votre prénom</string>
    <string name="faire_un_don_anonyme">Faire un don anonyme</string>
    <string name="entrez_votre_pr_nom">Entrez votre prénom</string>
    <string name="toggle_password">Afficher/Masquer mot de passe</string>
    <string name="consulter_mes_dons_annuels">Consulter mes dons annuels</string>
    <string name="nombre_total_de_dons_0_dons">Nombre total de dons : 0 dons</string>
    <string name="_0">Montant total des dons : 0 €</string>
    <string name="consulter_mes_dons_uniques">Consulter mes dons uniques</string>
    <string name="scanner_qrcode">Scannez ce QR Code pour télécharger l\'application</string>
    <string name="partager_le_qr_code">Partager le QR Code</string>
    <string name="partagez_l_application">Partagez l\'application</string>
    <string name="g_n_rer_qr_code">Générer QR Code</string>
    <string name="connexion_en_cours">Connexion en cours...</string>
    <string name="total_dons_realises">Total des dons réalisés</string>
    <string name="choix2">Que choisir ?</string>
    <string name="chargement_en_cours">Chargement en cours...</string>
    <string name="dons_annuels">Dons annuels</string>
    <string name="mon_activit">Mon activité</string>
    <string name="montant_total_des_dons_0">Montant total des dons : 0€</string>
    <string name="nombre_total_de_dons_0">Nombre total de dons : 0</string>
    <string name="pr_nom">Prénom :</string>
    <string name="montant_total_des_dons_0_euro">Montant total des dons : 0€</string>
    <string name="nombre_total_de_dons_0_euro">Nombre total de dons : 0</string>
    <string name="dons_uniques">Dons uniques</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié</string>
    <string name="pr_nom_">Prénom :</string>
    <string name="envoyer_un_mail_de_r_initialisation">Envoyer un mail de réinitialisation</string>
    <string name="votre_adresse_mail">Votre adresse mail</string>
    <string name="inscription_en_cours">Inscription en cours...</string>
    <string name="dons_mensuels">Dons mensuels</string>
    <string name="num_ro_de_carte">Numéro de carte</string>
    <string name="donner_">Donner</string>
    <string name="nom_association">Nom Association</string>
    <string name="description">Description</string>
    <string name="cat_gorie">Catégorie</string>

</resources>