<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/partagez_l_application"
        android:textSize="24sp"
        android:layout_marginBottom="16dp"/>

    <ImageView
        android:id="@+id/qrCodeImageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scanner_qrcode"
        android:textAlignment="center"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/partager_le_qr_code"
        android:layout_marginTop="16dp"/>
</LinearLayout>