<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_splash"
    android:padding="20dp"
    android:fillViewport="true"
    tools:context=".PaimentRibActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="top|center_horizontal">

        <!-- Bouton retour -->
        <ImageButton
            android:id="@+id/btn_retour"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button_back"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/retour"
            android:elevation="4dp"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            app:backgroundTint="#008F99"/>

        <!-- Logo -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center_horizontal"/>

        <!-- Texte d'information -->
        <TextView
            android:id="@+id/tv_paiement_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infos_paiement_iban"
            android:textSize="20sp"
            android:textColor="#00757D"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>

        <!-- IBAN -->
        <EditText
            android:id="@+id/et_iban"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/iban"
            android:inputType="text"
            android:maxLength="34"
            android:drawableStart="@drawable/ic_bank"
            android:padding="12dp"
            android:background="@drawable/input_background"
            android:textSize="16sp"
            android:layout_marginTop="15dp"/>

        <!-- BIC -->
        <EditText
            android:id="@+id/et_bic"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/bic_swift"
            android:inputType="text"
            android:maxLength="11"
            android:padding="12dp"
            android:background="@drawable/input_background"
            android:textSize="16sp"
            android:layout_marginTop="15dp"/>

        <!-- Titulaire du compte -->
        <EditText
            android:id="@+id/et_titulaire"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/nom_du_titulaire_du_compte"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:background="@drawable/input_background"
            android:textSize="16sp"
            android:layout_marginTop="15dp"/>


        <!-- Bouton de validation -->
        <Button
            android:id="@+id/btn_valider"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/donner"
            android:textSize="18sp"
            android:background="@drawable/button_rounded"
            android:textColor="@color/buttonTextColor"
            android:layout_marginTop="25dp"
            android:elevation="4dp"
            android:gravity="center"
            app:backgroundTint="@color/buttonColor"/>
    </LinearLayout>
</ScrollView>