<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_splash"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="top|center_horizontal">

    <!-- Bouton retour -->
    <ImageButton
        android:id="@+id/btn_retour"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button_back"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/retour"
        android:elevation="4dp"
        android:layout_gravity="start"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:backgroundTint="#008F99"/>

    <!-- Titre -->
    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mot_de_passe_oubli"
        android:textSize="26sp"
        android:textColor="#00757D"
        android:textStyle="bold"
        android:layout_marginTop="60dp"/>

    <!-- Champ Email -->
    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/votre_adresse_mail"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/input_background"
        android:textColor="#000000"
        android:textSize="16sp"/>

    <!-- Bouton de réinitialisation -->
    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/envoyer_un_mail_de_r_initialisation"
        android:textColor="@color/buttonTextColor"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_rounded"
        app:backgroundTint="@color/buttonColor"/>

</LinearLayout>
