<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/background_splash"
    android:padding="20dp"
    android:gravity="center">

    <!-- Bouton retour -->
    <ImageButton
        android:id="@+id/btn_retour"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button_back"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/retour"
        android:elevation="4dp"
        android:layout_gravity="start"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:backgroundTint="#008F99"/>

    <!-- Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btn_consulteractivite"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:minWidth="250dp"
        android:maxWidth="320dp"
        android:layout_gravity="center"
        android:text="@string/consulter"
        android:textSize="16sp"
        android:textColor="@color/buttonTextColor"
        android:background="@drawable/button_rounded"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="15dp"
        app:backgroundTint="@color/buttonColor"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btn_consulter_dons_annuels"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:minWidth="250dp"
        android:maxWidth="320dp"
        android:layout_gravity="center"
        android:text="@string/consulter_mes_dons_annuels"
        android:textSize="16sp"
        android:textColor="@color/buttonTextColor"
        android:background="@drawable/button_rounded"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        app:backgroundTint="@color/buttonColor"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btn_consulter_dons_uniques"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:minWidth="250dp"
        android:maxWidth="320dp"
        android:layout_gravity="center"
        android:text="@string/consulter_mes_dons_uniques"
        android:textSize="16sp"
        android:textColor="@color/buttonTextColor"
        android:background="@drawable/button_rounded"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        app:backgroundTint="@color/buttonColor"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btn_faire_un_don"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:minWidth="250dp"
        android:maxWidth="320dp"
        android:layout_gravity="center"
        android:text="@string/fairedon"
        android:textSize="16sp"
        android:textColor="@color/buttonTextColor"
        android:background="@drawable/button_rounded"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        app:backgroundTint="@color/buttonColor"
        tools:ignore="RtlHardcoded" />
    <Button
        android:id="@+id/btn_deconnexion"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:minWidth="250dp"
        android:maxWidth="320dp"
        android:layout_gravity="center"
        android:text="@string/deconnecter"
        android:textSize="16sp"
        android:textColor="@color/buttonTextColor"
        android:background="@drawable/button_rounded"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        app:backgroundTint="@color/buttonColor"
        tools:ignore="RtlHardcoded" />

    <!-- Espace en bas -->

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>